# HW_31

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
ads/: admin.py  models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_author.py  0003_alter_ad_options.py  0004_selection.py
ads/urls/: ad.py  cat.py
ads/views/: ad.py  cat.py  selection.py
data/: csv_to_json.py
my_avito/: settings.py  urls.py
tests/: factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_location.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_alter_user_age.py  0005_alter_user_role.py
